--- a/Problema/Parte1/index.html
+++ b/Problema/Parte1/index.html
@@ -11,5 +11,6 @@
 	<center><h3> El lenguaje del Futuro </h3></center>
 	<p align="justify">La programación está detrás de todos los productos digitales que usamos día a día. Nuestras coders aprenden HTML5, CSS3, Javascript y el uso de manejadores de contenido, terminando preparadas para crear infinitos productos y soluciones web.</p>
 	</div>
+	<li> <a href="../../index.html"> Regresar al Menú </a> </li>
 </body>
 </html>
