--- a/Problema/Parte3/index.html
+++ b/Problema/Parte3/index.html
@@ -21,6 +21,8 @@
 	<center><h3> Aprender a aprender</h3></center>
 	<p align="justify">Para triunfar como desarrolladoras web nuestras coders se convierten en autodidactas, decubriendo que no hay límites para seguir creciendo en este campo. Una computadora, conexión a internet, grandes sueños y dedicación es todo lo que se necesita.</p>
 	</div>
+	<li> <a href="../../index.html"> Regresar al Menú </a> </li>
+
 
 
 </body>
